<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">申通快递</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="costittle">标题栏</string>
    <string name="title_unupload">0票</string>
    <string name="title_unuploadmsg">0信</string>
    <string name="open_electric_scale">打开蓝牙电子称</string>
    <string name="blue_tooth_address">蓝牙地址</string>
    <string name="blue_device_searching">设备搜索中,请稍候...</string>
    <string name="device_name">设备名</string>
    <string name="verification_code">验证码</string>
    <string name="electric_scale_model">电子称型号</string>
    <string name="begin">起始</string>
    <string name="end">结束</string>
    <string name="reverse">反向</string>
    <string name="disconnect">断开</string>
    <string name="search_device">查找设备</string>
    <string name="connect">连接</string>
    <string name="save">保存</string>
    <string name="take_picture">拍照</string>
    <string name="cancel">取消</string>
    <string name="retake_picture">重拍</string>
    <string name="upload">上传</string>
    <string name="del">删除</string>
    <string name="back">返回</string>
    <string name="admin">管理员</string>
    <string name="login">登录(Enter)</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="objectSelector">选择器</string>
    <string name="service_url">服务地址</string>
    <string name="site_config">网点设置</string>
    <string name="function_config">功能设置</string>
    <string name="role_config">角色设置</string>
    <string name="autodel">自动删除</string>
    <string name="dataclear">数据清空</string>
    <string name="dataquery">数据查询</string>
    <string name="system_config">系统设置</string>
    <string name="service_ipurl">服务器IP地址：</string>
    <string name="upgrade_ipurl">升级IP地址：</string>
    <string name="smsInfoUrl">服务点信息下载地址：</string>
    <string name="smsSendUrl">短信发送地址：</string>
    <string name="mdDownURL">收件面单发送记录下载地址：</string>
    <string name="confirm">确认</string>
    <string name="set_stationId">请设置网点编号</string>
    <string name="site_config_tip">重新设置网点编号后将删除原有用户表和路由表及下一站点表，此操作不可恢复，请慎重使用！</string>
    <string name="wifi">WIFI</string>
    <string name="gprs">GPRS/3G</string>
    <string name="program_role">程序角色</string>
    <string name="device_role">巴枪角色</string>
    <string name="sj_md_control">收件(业务员/扫描员)面单扫描管控</string>
    <string name="sj_md_control_open">开启面单扫描管控功能</string>
    <string name="allow_select_operator">允许选择操作员</string>
    <string name="user">用户：</string>
    <string name="password">密码：</string>
    <string name="deviceId">巴枪ID：</string>
    <string name="salesCalls">客服电话:18936875744 </string>
    <string name="title_activity_user_role">UserRoleActivity</string>
    <string name="role_select">角色选择</string>
    <string name="title_activity_scan_base">ScanBaseActivity</string>
    <string name="title_activity_recipient_scan">收件</string>
    <string name="recipienter">收件人</string>
    <string name="item_category">物品类别</string>
    <string name="destination">目的地</string>
    <string name="weight">重量</string>
    <string name="barcode">单号</string>
    <string name="sign">签收</string>
    <string name="signer">签收人</string>
    <string name="doublesign">多票签收</string>
    <string name="opertype">操作类型</string>
    <string name="unuploadnum">未上传记录数</string>
    <string name="phonemessage">电话短信</string>
    <string name="please_input_usercode">请输入员工编号</string>
    <string name="select">选择</string>
    <string name="goods">货样</string>
    <string name="noGoods">非货样</string>
    <string name="fromPhone">寄方手机</string>
    <string name="toPhone">收方手机</string>
    <string name="please_input_code">请输入代码</string>
    <string name="title_activity_outgoing">OutgoingActivity</string>
    <string name="title_activity_topieces">TopiecesActivity</string>
    <string name="title_activity_sendingpieces">SendingpiecesActivity</string>
    <string name="title_activity_leave_warehouse">LeaveWarehouseActivity</string>
    <string name="title_activity_exception">ExceptionActivity</string>
    <string name="title_activity_bagging_out">BaggingOutActivity</string>
    <string name="title_activity_pack_out">PackOutActivity</string>
    <string name="title_activity_signchoose">SignChooseActivity</string>
    <string name="title_activity_signaturephoto">SignaturePhotoActivity</string>
    <string name="title_activity_pickup_scan">PickupScanActivity</string>
    <string name="title_activity_data_upload">DataUploadActivity</string>
    <string name="title_activity_barcode_track">BarcodeTrackActivity</string>
    <string name="title_activity_area_query">AreaQueryActivity</string>
    <string name="title_activity_area_nodelivery">AreaNoDelvieryAcitvity</string>
    <string name="title_activity_phone_message">PhoneMessageActivity</string>
    <string name="title_activity_zcfj">ZCFJActivity</string>
    <string name="title_activity_fcor_dc">FCOrDCActivity</string>
    <string name="title_activity_fc_or_dc">FcOrDcActivity</string>
    <string name="title_activity_pickup_choose_scan">PickupChooseActivity</string>
    <string name="title_activity_pickup_nophone_scan">PickupScanNophoneActivity</string>
    <string name="title_activity_pickup_phone_scan">PickupScanPhoneActivity</string>
    <string name="title_activity_after_server">AfterServerActivity</string>
    <string name="add">添加</string>
    <string name="vehicle_id">车辆ID</string>
    <string name="route">路由号</string>
    <string name="next_destination">下级目的地</string>
    <string name="second_destination">二级目的地</string>
    <string name="next_station">下一站</string>
    <string name="pre_station">上一站</string>
    <string name="send_pieces">派件员</string>
    <string name="flight">航班</string>
    <string name="package_no">袋号</string>
    <string name="pack_no">包号</string>
    <string name="type">类型</string>
    <string name="reason">原因</string>
    <string name="exception_pic">问题件图片</string>
    <string name="carlotnumber">车签号</string>
    <string name="serverstationcode">服务代码</string>
    <string name="serverstationaddress">服务地址</string>
    <string name="serverstationphone">服务电话</string>
    <string name="phonenum">手机号码</string>
    <string name="barcodemessage">请输入要查询的运单号:</string>
    <string name="province">省份：</string>
    <string name="city">城市：</string>
    <string name="area">地区：</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="userno">本工号</string>
    <string name="device">本巴枪</string>
    <string name="today">当天</string>
    <string name="yesterday">昨天</string>
    <string name="week">本周</string>
    <string name="lastweek">上周</string>
    <string name="statusup">上传状态</string>
    <string name="unup">未上传</string>
    <string name="up">已上传</string>
    <string name="statustype">业务类型</string>
    <string name="normal">普通件</string>
    <string name="hourstype">24H件</string>
    <string name="all">全部</string>
    <string name="oldpassword">原始密码</string>
    <string name="newpassword">新密码</string>
    <string name="surepassword">确认密码</string>
    <string name="title_activity_fb_or_db">FbOrDbActivity</string>
    <string name="title_activity_msg_notice">MsgNoticeActivity</string>
    <string name="btnpre">上一页</string>
    <string name="btnload">下载</string>
    <string name="btnnext">下一页</string>
    <string name="order_oper">订单操作</string>
    <string name="order">订单</string>
    <string name="des">描述</string>
    <string name="order_alter">订单提醒</string>
    <string name="tiptip">提示</string>
    <string name="keyword">关键字</string>
    <string name="search">搜索</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="receivephone">收方手机</string>
    <string name="multi_signture">多票</string>
    <string name="sendphone">寄件手机</string>
    <string name="uphands">手动</string>
    <string name="upauto">自动</string>
    <string name="upset">上传设置</string>
    <string name="time">分</string>
    
   <string name="unLockScreen">解锁</string>
    <string name="lockScreen">锁屏</string>
    <string name="unlockTip">请按Menu(三)解锁</string>
    <string name="isVibrator">震动</string>
    <string name="isLockScreen">锁屏</string>
    
    <string name="scan_module_set">扫描模式设置</string>
    <string name="singleScan">单扫</string>
    <string name="continueScan">连扫</string>
</resources>
