<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/bottom_3_btnUpload"
        style="@style/CommonButton"
        android:layout_weight="1"
        android:text="@string/upload" />

    <Button
        android:id="@+id/bottom_3_btnDel"
        style="@style/CommonButton"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:text="@string/del" />

    <Button
        android:id="@+id/bottom_3_btnBack"
        style="@style/CommonButton"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:text="@string/back" />

</LinearLayout>