<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp" >

    <TextView
        android:id="@+id/role_config_tvProgramRole"
        style="@style/CommonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/program_role" />

    <Spinner
        android:id="@+id/role_config_spnProgramRole"
        style="@style/CommonSpinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/role_config_tvProgramRole" />

    <TextView
        android:id="@+id/role_config_tvDeviceRole"
        style="@style/CommonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/role_config_tvProgramRole"
        android:layout_below="@id/role_config_tvProgramRole"
        android:layout_marginTop="35dp"
        android:text="@string/device_role" />

    <CheckBox
        android:id="@+id/role_config_chkDeviceRole"
        style="@style/CheckBox"
        android:layout_alignBaseline="@id/role_config_tvDeviceRole"
        android:layout_alignLeft="@id/role_config_spnProgramRole"
        android:layout_below="@id/role_config_spnProgramRole"
        android:layout_toRightOf="@id/role_config_tvDeviceRole"
        android:checked="true"
        android:text="@string/allow_select_operator" />

    <TextView
        android:id="@+id/role_config_tvsjMd_control"
        style="@style/CommonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/role_config_tvProgramRole"
        android:layout_below="@id/role_config_tvDeviceRole"
        android:layout_marginTop="25dp"
        android:text="@string/sj_md_control" />

    <CheckBox
        android:id="@+id/role_config_chksjMd_control"
        style="@style/CheckBox"
        android:layout_below="@id/role_config_tvsjMd_control"
        android:layout_marginLeft="55dp"
        android:text="@string/sj_md_control_open" />

    <LinearLayout
        android:id="@+id/role_config_llyBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/bottom_button_style_2" />
    </LinearLayout>

</RelativeLayout>